guest page and assets

--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 	color:white;
 	display:flex;
 	align-items:center;
-	padding:0 25px
+	padding:0 25px;
 	box-sizing:border-box;
 	z-index:1000;
 	justify-content:center;
@@ -18,11 +18,11 @@
 	list-style:none;
 	display:flex;
 	gap:25px;
-	margin-right:auto;
+	margin-right:10px;
 	}
 
 	.nav-links li a{
-	color:#ddd;
+	color:blue;
 	text-decoration:none;
 	font-size:16px;
 	transition:0.3s;
@@ -40,5 +40,32 @@
 	font-size:20px;
 	font-weight:bold;
 	text-shadow:0 0 7px #fff, 0 0 10px #fff,0 0 21px #ff00de;
+	padding: 5px 10px;
+	background:grey;
+	border-radius:50%;
+	}
 	
+	section{
+		background: linear-gradient(to right, #0D47A1,#1976D2,#42A5F5,#BBDEFB);
+		color:white;
+		text-align:center;
+		padding:60px 20px;
+	}
+	
+	.link-hero{
+		background-color:white;
+		color:#007bff;
+		padding: 10px 20px;
+		text-decoration:none;
+		font-weight:bold;
+		border-radius:5px;
+	}
+
+	.link-hero:hover{
+		background-color:#0056b3;
+		color:white;
+	}
+	
+	.logo a{
+		text-decoration:none;
 	}
